--- a/app/src/main/res/layout/fragment_store_orders.xml
+++ b/app/src/main/res/layout/fragment_store_orders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +8,92 @@
     tools:context=".StoreOrders">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="store order" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/storeOrderOrderNumberHeader"
+            android:layout_width="143dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/AllOrderNumber"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/storeOrderRecyclerView"
+            app:layout_constraintEnd_toStartOf="@+id/storeOrderSpinner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Spinner
+            android:id="@+id/storeOrderSpinner"
+            android:layout_width="149dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="54dp"
+            android:layout_marginBottom="31dp"
+            app:layout_constraintBottom_toTopOf="@+id/storeOrderRecyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/storeOrderOrderNumberHeader"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/storeOrderRecyclerView"
+            android:layout_width="413dp"
+            android:layout_height="352dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
+            app:layout_constraintBottom_toTopOf="@+id/storeOrderOrderTotal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storeOrderOrderNumberHeader" />
+
+        <TextView
+            android:id="@+id/storeOrderOrderTotalHeader"
+            android:layout_width="155dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/AllOrderTotal"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
+            app:layout_constraintEnd_toStartOf="@+id/storeOrderOrderTotal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storeOrderRecyclerView" />
+
+        <EditText
+            android:id="@+id/storeOrderOrderTotal"
+            android:layout_width="159dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="196dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/StoreOrderNumber"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/storeOrderOrderTotalHeader"
+            app:layout_constraintTop_toBottomOf="@+id/storeOrderRecyclerView" />
+
+        <Button
+            android:id="@+id/cancelOrderButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="237dp"
+            android:layout_marginBottom="102dp"
+            android:text="@string/CancelOrder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storeOrderOrderTotalHeader" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
