--- a/app/src/main/res/layout/current_order_recycler_row.xml
+++ b/app/src/main/res/layout/current_order_recycler_row.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/toppingsTextView"
                 android:layout_width="125dp"
                 android:layout_height="158dp"
-                android:layout_marginStart="23dp"
+                android:layout_marginStart="2dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="23dp"
@@ -62,7 +62,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/currentOrderRemoveButton"
-                app:layout_constraintStart_toEndOf="@+id/styleAndCrustTextView"
+                app:layout_constraintStart_toEndOf="@+id/flavorToppingsDivider"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -70,41 +70,41 @@
                 android:id="@+id/styleAndCrustTextView"
                 android:layout_width="117dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="17dp"
                 android:layout_marginBottom="12dp"
                 android:text="@string/PizzaStyleAndCrust"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/flavorTextView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/flavorTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginStart="46dp"
-                android:layout_marginEnd="75dp"
-                android:layout_marginBottom="96dp"
+                android:layout_width="88dp"
+                android:layout_height="39dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="77dp"
                 android:text="@string/PizzaFlavor"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/toppingsTextView"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/currentOrderRemoveButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="6dp"
-                android:layout_marginEnd="6dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="2dp"
                 android:text="@string/Remove"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/toppingsTextView"
-                app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
+                app:layout_constraintStart_toEndOf="@+id/toppingsSizeDivider"
+                app:layout_constraintTop_toBottomOf="@+id/priceTextView"
+                app:layout_constraintVertical_bias="0.382" />
 
             <View
                 android:id="@+id/flavorToppingsDivider"
@@ -112,7 +112,7 @@
                 android:layout_height="195dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="1dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -124,15 +124,17 @@
                 android:id="@+id/toppingsSizeDivider"
                 android:layout_width="5dp"
                 android:layout_height="195dp"
-                android:layout_marginStart="11dp"
+                android:layout_marginStart="2dp"
                 android:layout_marginTop="1dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="1dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/currentOrderRemoveButton"
+                app:layout_constraintHorizontal_bias="0.23"
                 app:layout_constraintStart_toEndOf="@+id/toppingsTextView"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
